apps/myapp2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp2-stable
  namespace: production
spec:
  selector:
    app: myapp2
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp2-canary
  namespace: production
spec:
  selector:
    app: myapp2
  ports:
    - port: 80
      targetPort: 80
