apps/myapp2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp2
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/canary: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: myapp2.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp2-stable
                port:
                  number: 80
